--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
     <title>ADD </title>
@@ -14,21 +16,27 @@
 
 <body>
 
-    <div class="navbar-fixed red">
+    <div class="navbar-fixed redColour">
         <nav>
-            <div class="nav-wrapper red">
+            <div class="nav-wrapper redColour">
                 <div class="navContent">
 
-                    <a href="#!" class="brand-logo">Adobe</a>
+                    <a href="#!" class="brand-logo">
+                        <div class="logo1">
+
+                            <img src="adobe.gif" alt="" class="logo" srcset="">
+                        </div>
+                    </a>
                     <ul class="right hide-on-med-and-down">
+                        <img src="aim-logo.png" class="logo2" alt="" srcset="">
                         <li><a href="https://www.adobe.com"> <span class="navButtons">
                                     Adobe
                                 </span> </a></li>
                         <li><a href="https://spark.adobe.com" target="_blank"> <span class="navButtons">
                                     Adobe Spark
                                 </span> </a></li>
-                        <li><a href="https://www.bharatskills.gov.in/Home/AdobeDigitalDisha"> <span
-                                    class="navButtons">Adobe Digital Disha</span></a></li>
+                        <li><a href="https://edex.adobe.com/en"> <span
+                                    class="navButtons">Adobe Education Exchange</span></a></li>
                     </ul>
                 </div>
             </div>
@@ -41,13 +49,25 @@
         <div class="text-heading">
             Adobe Digital Disha
         </div>
-        <div class="text-subheading">
-            workshop registration
+        <div class="paragraph container">
+
+            <span class="text">
+                With many Educational Institutions facing physical campus closures and moving to online learning due to
+                COVID-19 , Adobe in partnership with Atal Innovation Mission, Niti Aayog is happy to introduce a series
+                of Webinars for teachers across Atal Tinkering Labs. The main objective of this webinar is to help
+                teachers learn Adobe Spark to foster Digital Literacy and Creativity Skills of the students.<br />
+                For more information on Adobe’s distance learning resources please <a
+                    href="https://edex.adobe.com/distance-learning">click here.</a>
+            </span>
         </div>
+      
     </div>
+
+
+
     <div class="button onPhone">
 
-        <a class="waves-effect waves-light btn formButton red" href="https://forms.gle/h1eEvauv39wY78dx6">
+        <a class="waves-effect waves-light btn formButton redColour" href="https://forms.gle/h1eEvauv39wY78dx6">
 
             <span class="text">
                 fill the form!
@@ -55,16 +75,20 @@
     </div>
     <div class="z-depth-3 onPC table1">
         <div class="tableHeading">
+
+
             <span class="heading">
                 Schedule
             </span>
+            <br />
+            <span class="headingWebinar">Webinar - Creativity and digital literacy skill building – Adobe Digital
+                Disha</span>
         </div>
         <div class="table ">
             <table>
                 <thead>
                     <tr>
                         <th>Serial No.</th>
-                        <th>Particulars</th>
                         <th>Date</th>
                         <th>Time</th>
                     </tr>
@@ -73,7 +97,6 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>Webinar - Creativity and digital literacy skill building – Adobe Digital Disha</td>
                         <td>30<sup>th</sup> March 2020
 
                         </td>
@@ -81,7 +104,6 @@
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>Webinar - Creativity and digital literacy skill building – Adobe Digital Disha</td>
                         <td>31<sup>st</sup> March 2020
 
 
@@ -91,7 +113,6 @@
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>Webinar - Creativity and digital literacy skill building – Adobe Digital Disha</td>
                         <td>1<sup>st</sup> April 2020
 
                         </td>
@@ -99,7 +120,6 @@
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>Webinar - Creativity and digital literacy skill building – Adobe Digital Disha</td>
                         <td>2<sup>nd</sup> April 2020
 
                         </td>
@@ -107,7 +127,6 @@
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>Webinar - Creativity and digital literacy skill building – Adobe Digital Disha</td>
                         <td>3<sup>rd</sup> April 2020
 
                         </td>
@@ -123,13 +142,15 @@
             <span class="heading">
                 Schedule
             </span>
+            <br />
+            <span class="headingWebinar">Webinar - Creativity and digital literacy skill building – Adobe Digital
+                Disha</span>
         </div>
         <div class="table ">
             <table>
                 <thead>
                     <tr>
                         <th>No.</th>
-                        <th>Particulars</th>
                         <th>Date</th>
                         <th>Time</th>
                     </tr>
@@ -138,7 +159,6 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>Webinar - Creativity and digital literacy skill building – Adobe Digital Disha</td>
                         <td>30<sup>th</sup> March 2020
 
                         </td>
@@ -146,7 +166,6 @@
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>Webinar - Creativity and digital literacy skill building – Adobe Digital Disha</td>
                         <td>31<sup>st</sup> March 2020
 
 
@@ -156,7 +175,6 @@
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>Webinar - Creativity and digital literacy skill building – Adobe Digital Disha</td>
                         <td>1<sup>st</sup> April 2020
 
                         </td>
@@ -164,7 +182,6 @@
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>Webinar - Creativity and digital literacy skill building – Adobe Digital Disha</td>
                         <td>2<sup>nd</sup> April 2020
 
                         </td>
@@ -172,7 +189,6 @@
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>Webinar - Creativity and digital literacy skill building – Adobe Digital Disha</td>
                         <td>3<sup>rd</sup> April 2020
 
                         </td>
@@ -184,9 +200,31 @@
         </div>
 
     </div>
+<div class="registration">
+    <div class="text-subheading">
+        workshop registration
+    </div>
+<div class="procedure container">
+<ol>
+
+
+    <li>Please fill in the Form and ensure to put correct details – Link of the form</li>
+    <br />
+
+    <li>You will receive a mail from Adobe giving you access to Adobe Spark Premium License. Go ahead and Click on the mail and activate your License. (Adobe ID needed)</li>
+    <br />
+        <li>Use your email id to create your Adobe ID from <a href="http://adobe.ly/2Pd4eGR">here</a> (Signup for Adobe ID ) or use the link received on your email.</li>
+        <br />
+
+            <li>Join the webinar and  enhance your arsenal of Creativity</li>
+</ol>
+
+</div>
+</div>
+
     <div class="button onPC">
 
-        <a class="waves-effect waves-light btn formButton red" href="https://forms.gle/h1eEvauv39wY78dx6">
+        <a class="waves-effect waves-light btn formButton redColour" href="https://forms.gle/h1eEvauv39wY78dx6">
 
             <span class="text">
                 fill the form!
@@ -196,26 +234,35 @@
 
 
 
-    <footer class="page-footer red">
+    <footer class="page-footer redColour">
         <div class="container">
             <div class="row">
-                <div class="col l6 s12">
+                <div class="col l4 s12">
                     <h5 class="white-text">Adobe Digital Disha</h5>
                     <p class="grey-text text-lighten-4">Adobe is offering free licences of Adobe Spark premium at no
                         cost to all the students under its program ‘Adobe Digital Disha’.</p>
+                        <div class="sparkLogo">
+                            <img src="spark.png" alt="" srcset="">
+                        </div>
                 </div>
-                <div class="col l4 offset-l2 s12">
-                    <h5 class="white-text">Links</h5>
+                <div class="col l6 offset-l2 s12">
+                    <h5 class="white-text">Important Links</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="https://forms.gle/h1eEvauv39wY78dx6">The Form</a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://www.adobe.com">Adobe.com</a></li>
-                        <li><a class="grey-text text-lighten-3" href="spark.adobe.com">Adobe spark</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://edex.adobe.com/en/resource/vd2543e5b">Adobe Spark Getting Started Videos</a>
+                        </li>
+                        <li><a class="grey-text text-lighten-3" href="https://edex.adobe.com/spark">Adobe Education Exchange – Spark Teaching resources </a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://edex.adobe.com/professional-development/courses">Adobe Education Exchange – Professional Development Courses</a></li>
 
                         <li><a class="grey-text text-lighten-3"
-                                href="https://www.bharatskills.gov.in/Home/AdobeDigitalDisha">Bharat Skills</a></li>
-                        <li><a class="grey-text text-lighten-3"
-                                href="https://www.adobe.com/content/dam/acom/in/about-adobe/newsroom/pdfs/Ministry%20of%20Skill%20Development%20and%20Entrepreneurship%20Partners%20with%20Adobe%20to%20Launch%20Adobe%20Digital%20Disha%20Programme.pdf">Adobe
-                                Circular</a></li>
+                                href="https://edex.adobe.com/adobeforacademics">Adobe Education Exchange – Adobe for Academics</a></li>
+                                <li><a class="grey-text text-lighten-3"
+                                    href="https://edex.adobe.com/common-core">Adobe Education Exchange – Lesson Plans</a></li>
+                                    <li><a class="grey-text text-lighten-3"
+                                        href="https://edex.adobe.com/distance-learning
+
+ 
+
+                                        ">Adobe Distance Learning Resources</a></li>
                     </ul>
                 </div>
             </div>
