--- a/index.html
+++ b/index.html
@@ -10,255 +10,172 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700,800&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <title>ADD </title>
 </head>
 
 <body>
+    <main class="section1">
+        <div class="navbar-fixed redColour">
+            <nav>
+                <div class="nav-wrapper redColour">
+                    <div class="navContent">
 
-    <div class="navbar-fixed redColour">
-        <nav>
-            <div class="nav-wrapper redColour">
-                <div class="navContent">
+                        <a href="#!" class="brand-logo">
+                            <div class="logo1">
 
-                    <a href="#!" class="brand-logo">
-                        <div class="logo1">
+                                <img src="adobe.jpg" alt="" class="logo" srcset="">
+                            </div>
+                        </a>
+                        <ul class="right hide-on-med-and-down">
+                            <img src="aim-logo.png" class="logo2" alt="" srcset="">
+                            <li><a href="https://www.adobe.com/in/creativecloud.html"> <span class="navButtons">
+                                        Creative Cloud
+                                    </span> </a></li>
+                            <li><a href="https://spark.adobe.com/edu" target="_blank"> <span class="navButtons">
+                                        Adobe Spark For Education
+                                    </span> </a></li>
+                            <li><a href="https://edex.adobe.com/en"> <span class="navButtons">Adobe Education
+                                        Exchange</span></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
 
-                            <img src="adobe.gif" alt="" class="logo" srcset="">
-                        </div>
-                    </a>
-                    <ul class="right hide-on-med-and-down">
-                        <img src="aim-logo.png" class="logo2" alt="" srcset="">
-                        <li><a href="https://www.adobe.com"> <span class="navButtons">
-                                    Adobe
-                                </span> </a></li>
-                        <li><a href="https://spark.adobe.com" target="_blank"> <span class="navButtons">
-                                    Adobe Spark
-                                </span> </a></li>
-                        <li><a href="https://edex.adobe.com/en"> <span
-                                    class="navButtons">Adobe Education Exchange</span></a></li>
-                    </ul>
+        </div>
+        <div class=" container">
+
+
+
+            <div class="ADD-Heading ">
+                <div class="text-heading">
+                    Adobe Digital Disha
+                </div>
+                <div class="paragraph container">
+
+                    <span class="text">
+                        Adobe in partnership with Atal Innovation Mission, Niti Aayog is happy to introduce a
+                        series
+                        of Webinars for teachers across Atal Tinkering Labs. The main objective of this webinar is to
+                        help
+                        teachers learn Adobe Spark to foster Digital Literacy and Creativity Skills of the
+                        students.<br />
+                        For more information on Adobe’s distance learning resources please <a
+                            href="https://edex.adobe.com/distance-learning">click here.</a>
+                    </span>
+                </div>
+
+            </div>
+
+        </div>
+        <div class="button onPhone">
+
+            <a class="waves-effect waves-light btn formButton redColour1" href="https://forms.gle/h1eEvauv39wY78dx6">
+
+                <span class="text">
+                    fill the form!
+                </span></a>
+        </div>
+        <div class="schedule container">
+
+            <div class="text-subheading ">
+                Webinar Details
+            </div>
+            <div class="text">
+                <b>Webinar</b> - Creativity and digital literacy skill building – Adobe Digital Disha<br />
+                <b>Duration </b> - 2 hours (01:00 pm to 03:00 pm)<br />
+
+                <b>Dates</b> - 30<sup>th</sup> March 2020 to 3<sup>rd</sup> April 2020
+            </div>
+
+        </div>
+        <div class="registration">
+            <div class="text-subheading">
+                Webinar Registration Process
+            </div>
+            <div class="procedure container">
+                <ol>
+
+
+
+                    <li>Please fill in the <a href="https://forms.gle/h1eEvauv39wY78dx6"> Form </a>and ensure to put the
+                        correct details
+                    </li>
+                    <br />
+
+                    <li>You will receive a mail from Adobe giving you access to Adobe Spark Premium License.
+
+
+                    </li>
+                </ol>
+
+                <div class="text-subheading">
+                    Webinar Prerequisites
+                </div>
+                <ol>
+                    <li>
+                        Click on the mail to access Adobe Spark license and activate your License. (Adobe ID needed)
+                    </li>
+                    <br />
+                    <li>Use your email id to create your Adobe ID from <a href="http://adobe.ly/2Pd4eGR">here</a>
+                        (Signup for Adobe ID )as the one in which you’ve received your email. or use the link received
+                        on your email.</li>
+                    <br />
+
+                    <li>you will require Internet to work on Adobe Spark during the session </li>
+                </ol>
+                <div class="textC">
+
+                    Join the webinar and enhance your arsenal of Creativity
                 </div>
             </div>
-        </nav>
-
-    </div>
-
-
-    <div class="ADD-Heading">
-        <div class="text-heading">
-            Adobe Digital Disha
-        </div>
-        <div class="paragraph container">
-
-            <span class="text">
-                With many Educational Institutions facing physical campus closures and moving to online learning due to
-                COVID-19 , Adobe in partnership with Atal Innovation Mission, Niti Aayog is happy to introduce a series
-                of Webinars for teachers across Atal Tinkering Labs. The main objective of this webinar is to help
-                teachers learn Adobe Spark to foster Digital Literacy and Creativity Skills of the students.<br />
-                For more information on Adobe’s distance learning resources please <a
-                    href="https://edex.adobe.com/distance-learning">click here.</a>
-            </span>
-        </div>
-      
-    </div>
-
-
-
-    <div class="button onPhone">
-
-        <a class="waves-effect waves-light btn formButton redColour" href="https://forms.gle/h1eEvauv39wY78dx6">
-
-            <span class="text">
-                fill the form!
-            </span></a>
-    </div>
-    <div class="z-depth-3 onPC table1">
-        <div class="tableHeading">
-
-
-            <span class="heading">
-                Schedule
-            </span>
-            <br />
-            <span class="headingWebinar">Webinar - Creativity and digital literacy skill building – Adobe Digital
-                Disha</span>
-        </div>
-        <div class="table ">
-            <table>
-                <thead>
-                    <tr>
-                        <th>Serial No.</th>
-                        <th>Date</th>
-                        <th>Time</th>
-                    </tr>
-                </thead>
-
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>30<sup>th</sup> March 2020
-
-                        </td>
-                        <td>1:00 pm – 3:00 pm</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>31<sup>st</sup> March 2020
-
-
-
-                        </td>
-                        <td>1:00 pm – 3:00 pm</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>1<sup>st</sup> April 2020
-
-                        </td>
-                        <td>1:00 pm – 3:00 pm</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>2<sup>nd</sup> April 2020
-
-                        </td>
-                        <td>1:00 pm – 3:00 pm</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>3<sup>rd</sup> April 2020
-
-                        </td>
-                        <td>1:00 pm – 3:00 pm</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-
-    <div class="z-depth-1 onPhone table1">
-        <div class="tableHeading">
-            <span class="heading">
-                Schedule
-            </span>
-            <br />
-            <span class="headingWebinar">Webinar - Creativity and digital literacy skill building – Adobe Digital
-                Disha</span>
-        </div>
-        <div class="table ">
-            <table>
-                <thead>
-                    <tr>
-                        <th>No.</th>
-                        <th>Date</th>
-                        <th>Time</th>
-                    </tr>
-                </thead>
-
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>30<sup>th</sup> March 2020
-
-                        </td>
-                        <td>1:00 pm – 3:00 pm</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>31<sup>st</sup> March 2020
-
-
-
-                        </td>
-                        <td>1:00 pm – 3:00 pm</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>1<sup>st</sup> April 2020
-
-                        </td>
-                        <td>1:00 pm – 3:00 pm</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>2<sup>nd</sup> April 2020
-
-                        </td>
-                        <td>1:00 pm – 3:00 pm</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>3<sup>rd</sup> April 2020
-
-                        </td>
-                        <td>1:00 pm – 3:00 pm</td>
-                    </tr>
-                </tbody>
-            </table>
-
         </div>
 
-    </div>
-<div class="registration">
-    <div class="text-subheading">
-        workshop registration
-    </div>
-<div class="procedure container">
-<ol>
+        <div class="button onPC">
+
+            <a class="waves-effect waves-light btn formButton redColour1" href="https://forms.gle/h1eEvauv39wY78dx6">
+
+                <span class="text">
+                    fill the form!
+                </span></a>
+        </div>
 
 
-    <li>Please fill in the Form and ensure to put correct details – Link of the form</li>
-    <br />
-
-    <li>You will receive a mail from Adobe giving you access to Adobe Spark Premium License. Go ahead and Click on the mail and activate your License. (Adobe ID needed)</li>
-    <br />
-        <li>Use your email id to create your Adobe ID from <a href="http://adobe.ly/2Pd4eGR">here</a> (Signup for Adobe ID ) or use the link received on your email.</li>
-        <br />
-
-            <li>Join the webinar and  enhance your arsenal of Creativity</li>
-</ol>
-
-</div>
-</div>
-
-    <div class="button onPC">
-
-        <a class="waves-effect waves-light btn formButton redColour" href="https://forms.gle/h1eEvauv39wY78dx6">
-
-            <span class="text">
-                fill the form!
-            </span></a>
-    </div>
+    </main>
 
 
-
-
-    <footer class="page-footer redColour">
+    <footer class="page-footer redColour1 ">
         <div class="container">
             <div class="row">
                 <div class="col l4 s12">
                     <h5 class="white-text">Adobe Digital Disha</h5>
                     <p class="grey-text text-lighten-4">Adobe is offering free licences of Adobe Spark premium at no
                         cost to all the students under its program ‘Adobe Digital Disha’.</p>
-                        <div class="sparkLogo">
-                            <img src="spark.png" alt="" srcset="">
-                        </div>
+                    <div class="sparkLogo">
+                        <img src="spark.svg" class="sparkLogo1" alt="" srcset="">
+                    </div>
                 </div>
                 <div class="col l6 offset-l2 s12">
                     <h5 class="white-text">Important Links</h5>
                     <ul>
-                        <li><a class="grey-text text-lighten-3" href="https://edex.adobe.com/en/resource/vd2543e5b">Adobe Spark Getting Started Videos</a>
-                        </li>
-                        <li><a class="grey-text text-lighten-3" href="https://edex.adobe.com/spark">Adobe Education Exchange – Spark Teaching resources </a></li>
-                        <li><a class="grey-text text-lighten-3" href="https://edex.adobe.com/professional-development/courses">Adobe Education Exchange – Professional Development Courses</a></li>
-
                         <li><a class="grey-text text-lighten-3"
-                                href="https://edex.adobe.com/adobeforacademics">Adobe Education Exchange – Adobe for Academics</a></li>
-                                <li><a class="grey-text text-lighten-3"
-                                    href="https://edex.adobe.com/common-core">Adobe Education Exchange – Lesson Plans</a></li>
-                                    <li><a class="grey-text text-lighten-3"
-                                        href="https://edex.adobe.com/distance-learning
+                                href="https://edex.adobe.com/en/resource/vd2543e5b">Adobe Spark Getting Started
+                                Videos</a>
+                        </li>
+                        <li><a class="grey-text text-lighten-3" href="https://edex.adobe.com/spark">Adobe Education
+                                Exchange – Spark Teaching resources </a></li>
+                        <li><a class="grey-text text-lighten-3"
+                                href="https://edex.adobe.com/professional-development/courses">Adobe Education Exchange
+                                – Professional Development Courses</a></li>
+
+                        <li><a class="grey-text text-lighten-3" href="https://edex.adobe.com/adobeforacademics">Adobe
+                                Education Exchange – Adobe for Academics</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://edex.adobe.com/common-core">Adobe
+                                Education Exchange – Lesson Plans</a></li>
+                        <li><a class="grey-text text-lighten-3" href="https://edex.adobe.com/distance-learning
 
  
 
