--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="textC">
 
                     Please join us for professional development webinars and enhance innovation, digital literacy and creativity skill of your students.
-                    Happy Tinkering 
+                  <br />  Happy Tinkering 
                     
                                                     </div>
             </div>
