--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
         <div class="button onPhone">
 
-            <a class="waves-effect  btn formButton redColour1" href="https://forms.gle/h1eEvauv39wY78dx6">
+            <a class="waves-effect  btn formButton redColour1 button-redColour" href="https://forms.gle/h1eEvauv39wY78dx6">
 
                 <span class="text">
                     Register Here </span></a>
@@ -188,7 +188,7 @@
 
         <div class="button onPC">
 
-            <a class="waves-effect  btn formButton redColour1" href="https://forms.gle/h1eEvauv39wY78dx6">
+            <a class="waves-effect  btn formButton redColour1 button-redColour" href="https://forms.gle/h1eEvauv39wY78dx6">
 
                 <span class="text">
                     Register Here </span></a>
