--- a/index.html
+++ b/index.html
@@ -104,30 +104,54 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>4<sup>th</sup> April 2020</td>
-                        <td>1 pm to 3 pm</td>
+                        <td>11<sup>th</sup> April 2020</td>
+                        <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>6<sup>th</sup> April 2020</td>
-                        <td>1 pm to 3 pm</td>
+                        <td>13<sup>th</sup> April 2020</td>
+                        <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>7<sup>th</sup> April 2020</td>
-                        <td>1 pm to 3 pm</td>
+                        <td>15<sup>th</sup> April 2020</td>
+                        <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>8<sup>th</sup> April 2020</td>
-                        <td>1 pm to 3 pm</td>
+                        <td>18<sup>th</sup> April 2020</td>
+                        <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
                         <td>5</td>
-                        <td>9<sup>th</sup> April 2020</td>
-                        <td>1 pm to 3 pm</td>
+                        <td>20<sup>th</sup> April 2020</td>
+                        <td>3 pm to 5 pm</td>
                     </tr>
-
+                    <tr>
+                        <td>6</td>
+                        <td>22<sup>th</sup> April 2020</td>
+                        <td>3 pm to 5 pm</td>
+                    </tr>
+                    <tr>
+                        <td>7</td>
+                        <td>24<sup>th</sup> April 2020</td>
+                        <td>3 pm to 5 pm</td>
+                    </tr>
+                    <tr>
+                        <td>8</td>
+                        <td>27<sup>th</sup> April 2020</td>
+                        <td>3 pm to 5 pm</td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td>29<sup>th</sup> April 2020</td>
+                        <td>3 pm to 5 pm</td>
+                    </tr>
+                    <tr>
+                        <td>10</td>
+                        <td>2<sup>nd</sup> May 2020</td>
+                        <td>3 pm to 5 pm</td>
+                    </tr>
                 </tbody>
             </table>
 
