add-slot-status

--- a/index.html
+++ b/index.html
@@ -92,58 +92,84 @@
             </div> -->
 
 
-            <table class="highlight centered   ">
+            <table class=" centered   ">
                 <thead>
-                    <tr>
+
+                    <tr >
                         <th>S.no</th>
+                        <th>Status</th>
                         <th>Date</th>
                         <th>Time</th>
                     </tr>
                 </thead>
 
                 <tbody>
+                        <tr class="disabled">
+                            <td>1</td>
+                            <td class="slotStatus">FULL</td>
+                            <td>11<sup>th</sup> April 2020</td>
+                            <td>3 pm to 5 pm</td>
+                        </tr>
                     <tr>
-                        <td>1</td>
+                        <td>2</td>
+                        <td class="slotStatus">Available</td>
+
                         <td>13<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
-                        <td>2</td>
+                        <td>3</td>
+                        <td class="slotStatus">Available</td>
+
                         <td>15<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
-                        <td>3</td>
+                        <td>4</td>
+                        <td class="slotStatus">Available</td>
+
                         <td>18<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
-                        <td>4</td>
+                        <td>5</td>
+                        <td class="slotStatus">Available</td>
+
                         <td>20<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
-                        <td>5</td>
+                        <td>6</td>
+                        <td class="slotStatus">Available</td>
+
                         <td>22<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
-                        <td>6</td>
+                        <td>7</td>
+                        <td class="slotStatus">Available</td>
+
                         <td>25<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
-                        <td>7</td>
+                        <td>8</td>
+                        <td class="slotStatus">Available</td>
+
                         <td>27<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
-                        <td>8</td>
+                        <td>9</td>
+                        <td class="slotStatus">Available</td>
+                        
                         <td>29<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
                     <tr>
-                        <td>9</td>
+                        <td>10</td>
+                        <td class="slotStatus">Available</td>
+
                         <td>2<sup>nd</sup> May 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
