add-slot-status

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
                             <td>11<sup>th</sup> April 2020</td>
                             <td>3 pm to 5 pm</td>
                         </tr>
-                    <tr>
+                    <tr class="disabled">
                         <td>2</td>
-                        <td class="slotStatus">Available</td>
+                        <td class="slotStatus">Full</td>
 
                         <td>13<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
