--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </tr>
                     <tr class="disabled">
                         <td>2</td>
-                        <td class="slotStatus">Full</td>
+                        <td class="slotStatus">FULL</td>
 
                         <td>13<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
