--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                         <td>13<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
-                    <tr>
+                    <tr class="disabled">
                         <td>3</td>
-                        <td class="slotStatus">Available</td>
+                        <td class="slotStatus">FULL</td>
 
                         <td>15<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
