--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
                         <td>15<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
-                    <tr>
+                    <tr class="disabled">
                         <td>4</td>
-                        <td class="slotStatus">Available</td>
+                        <td class="slotStatus">FULL</td>
 
                         <td>18<sup>th</sup> April 2020</td>
-                        <td>3 pm to 5 pm</td>
+                        <td>3 pm to 5 pm</td>       
                     </tr>
                     <tr>
                         <td>5</td>
