--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
                         <td>18<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>       
                     </tr>
-                    <tr>
+                    <tr class="disabled">
                         <td>5</td>
-                        <td class="slotStatus">Available</td>
+                        <td class="slotStatus">FULL</td>
 
                         <td>20<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
