--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                         <td>20<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
-                    <tr>
+                    <tr class="disabled">
                         <td>6</td>
-                        <td class="slotStatus">Available</td>
+                        <td class="slotStatus">FULL</td>
 
                         <td>22<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
