--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                         <td>22<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
-                    <tr>
+                    <tr class="disabled">
                         <td>7</td>
-                        <td class="slotStatus">Available</td>
+                        <td class="slotStatus">FULL</td>
 
                         <td>25<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
