--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
                         <td>27<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
-                    <tr>
+                    <tr class="disabled">
                         <td>9</td>
-                        <td class="slotStatus">Available</td>
+                        <td class="slotStatus">FULL</td>
                         
                         <td>29<sup>th</sup> April 2020</td>
                         <td>3 pm to 5 pm</td>
