edit: && git push

--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                         <td>2<sup>nd</sup> May 2020</td>
                         <td>3 pm to 5 pm</td>
                     </tr>
-                    <tr>
+                    <tr class="disabled">
                         <td>11</td>
-                        <td class="slotStatus">AVAILABLE</td>
+                        <td class="slotStatus">FULL</td>
 
                         <td>7<sup>th</sup> May 2020</td>
                         <td>6:30 pm to 8 pm</td>
