--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div class="button onPhone">
         <a
           class="waves-effect btn formButton redColour1 button-redColour"
-          href="https://forms.gle/h1eEvauv39wY78dx6"
+          href="https://forms.gle/RX9BrhdeAFW3Ziz59"
         >
           <span class="text"> Register Here </span></a
         >
@@ -160,7 +160,7 @@
           <ol>
             <li>
               Please fill in the
-              <a href="https://forms.gle/h1eEvauv39wY78dx6"> Form </a>and ensure
+              <a href="https://forms.gle/RX9BrhdeAFW3Ziz59"> Form </a>and ensure
               to put the correct details
             </li>
             <br />
@@ -209,7 +209,7 @@
       <div class="button onPC">
         <a
           class="waves-effect btn formButton redColour1 button-redColour"
-          href="https://forms.gle/h1eEvauv39wY78dx6"
+          href="https://forms.gle/RX9BrhdeAFW3Ziz59"
         >
           <span class="text"> Register Here </span></a
         >
